--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -47,7 +47,13 @@
     command: export AWS_ACCESS_KEY_ID={{ AWS_ACCEESS_KEY }} && export AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_KEY }} && export AWS_DEFAULT_REGION=us-east-2
 
   - name: Ensure war file in s3 backet
-    command: aws s3 cp /tmp/test-webapp/target/hello-1.0.war s3://mybacket1.test5.com/
+    community.aws.s3_sync:
+      bucket: mybacket1.test5.com
+      file_root: /tmp/WAR/target/
+      include: "*.war"
+      aws_access_key: {{ AWS_ACCEESS_KEY }}
+      aws_secret_key: {{ AWS_SECRET_KEY }}
+
 
 
 - name: App server provisioning
