--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -47,7 +47,7 @@
     command: export AWS_ACCESS_KEY_ID={{ AWS_ACCEESS_KEY }} && export AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_KEY }} && export AWS_DEFAULT_REGION=us-east-2
 
   - name: Ensure war file in s3 backet
-    community.aws.s3_sync:
+    aws.s3_sync:
       bucket: mybacket1.test5.com
       file_root: /tmp/WAR/target/
       include: "*.war"
