--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -53,6 +53,7 @@
       include: "*.war"
       aws_access_key: "{{ AWS_ACCEESS_KEY }}"
       aws_secret_key: "{{ AWS_SECRET_KEY }}"
+      region: "{{ AWS_REGION }}"
 
 
 
