--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -33,6 +33,7 @@
       - default-jdk
       - maven
       - awscli
+      - python-pip
 
   - name: Ensure the git repository is cloned
     git:
@@ -46,6 +47,9 @@
 #  - name: Configure AWS-CLI
 #    command: export AWS_ACCESS_KEY_ID={{ AWS_ACCEESS_KEY }} && export AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_KEY }} && export AWS_DEFAULT_REGION=us-east-2
 
+  - name: Requirements for s3_sync
+    command: pip install boto3 && pip install python-dateutil
+
   - name: Ensure war file in s3 backet
     s3_sync:
       bucket: mybacket1.test5.com
@@ -54,6 +58,7 @@
       aws_access_key: "{{ AWS_ACCEESS_KEY }}"
       aws_secret_key: "{{ AWS_SECRET_KEY }}"
       region: "{{ AWS_REGION }}"
+      permission: public-read
 
 
 
@@ -65,5 +70,10 @@
     - name: Ensure tomcat is present
       apt:
         update_cache: yes
-        name: tomcat9
+        name: docker.io
         state: present
+
+    - name: Ensure war file on App Server
+      get_url:
+        url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
+
