--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -44,9 +44,6 @@
   - name: Ensure war file is ready
     command: mvn package -f /tmp/WAR/pom.xml
 
-#  - name: Configure AWS-CLI
-#    command: export AWS_ACCESS_KEY_ID={{ AWS_ACCEESS_KEY }} && export AWS_SECRET_ACCESS_KEY={{ AWS_SECRET_KEY }} && export AWS_DEFAULT_REGION=us-east-2
-
   - name: Requirements for s3_sync
     command: pip install boto3 python-dateutil
 
@@ -76,4 +73,5 @@
     - name: Ensure war file on App Server
       get_url:
         url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
+        dest: ./
 
