--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -76,5 +76,5 @@
         dest: ./war/
 
     - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 -v $(pwd)/war:/usr/local/tomcat/webapps/
+      command: docker run --name webapp -d -p 8080:8080 -v $(pwd)/war:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
 
