--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -82,5 +82,5 @@
         dest: tmp/war/
 
     - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 -v tmp/war:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
+      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
 
