--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -81,6 +81,6 @@
         url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
         dest: tmp/war/
 
-    - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
+ #   - name: Ensure docker container is started
+ #     command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
 
