--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -64,7 +64,7 @@
   remote_user: ubuntu
 
   tasks:
-    - name: Ensure tomcat is present
+    - name: Ensure docker is present
       apt:
         update_cache: yes
         name: docker.io
@@ -79,8 +79,8 @@
     - name: Ensure war file on App Server
       get_url:
         url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
-        dest: tmp/war/
+        dest: tmp/war/hello-1.0.war
 
- #   - name: Ensure docker container is started
- #     command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
+    - name: Ensure docker container is started
+      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
 
