--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -81,8 +81,9 @@
         url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
         dest: tmp/war/hello-1.0.war
 
-#    - name: Ensure old version is not running
-#      command: docker stop webapp && docker rm webapp
+    - name: Ensure old version is not running
+      command: docker stop webapp && docker rm webapp
+      ignore_errors: yes
 
     - name: Ensure docker container is started
       command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
