--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -90,5 +90,5 @@
       ignore_errors: yes
 
     - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ tomcat:9.0.20-jre8-alpine
+      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ --restart=always tomcat:9.0.20-jre8-alpine
 
