--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -82,12 +82,14 @@
         dest: tmp/war/hello-1.0.war
 
     - name: Ensure old version is not running
-      command: docker stop webapp
+      shell: |
+        docker stop webapp
+        docker rm webapp
       ignore_errors: yes
 
-    - name: Ensure old version is not running
-      command: docker rm webapp
-      ignore_errors: yes
+#    - name: Ensure old version is not running
+#      command: docker rm webapp
+#      ignore_errors: yes
 
     - name: Ensure docker container is started
       command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ --restart=always tomcat:9.0.20-jre8-alpine
