--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -87,6 +87,6 @@
         docker rm webapp
       ignore_errors: yes
 
-    - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ --restart=always tomcat:9.0.20-jre8-alpine
+#    - name: Ensure docker container is started
+#      command: docker run --name webapp -d -p 8080:8080 -v /tmp/war/:/usr/local/tomcat/webapps/ --restart=always tomcat:9.0.20-jre8-alpine
 
