--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -72,14 +72,14 @@
 
     - name: Ensure derictory for war file is ready
       file:
-        path: tmp/war
+        path: /home/ubuntu/war
         state: directory
         mode: '0777'
 
     - name: Ensure war file on App Server
       get_url:
         url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
-        dest: tmp/war/hello-1.0.war
+        dest: /home/ubuntu/war/hello-1.0.war
 
     - name: Ensure old version is not running
       shell: |
