--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -55,7 +55,7 @@
       aws_access_key: "{{ AWS_ACCEESS_KEY }}"
       aws_secret_key: "{{ AWS_SECRET_KEY }}"
       region: "{{ AWS_REGION }}"
-      permission: public-read
+      permission: private
 
 
 
@@ -76,9 +76,20 @@
         state: directory
 
     - name: Ensure war file on App Server
-      get_url:
-        url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
-        dest: /home/ubuntu/war/hello-1.0.war
+      amazon.aws.aws_s3:
+        bucket: mybacket1.test5.com
+        object: hello-1.0
+        dest: /home/ubuntu/war
+        mode: get
+        aws_access_key: "{{ AWS_ACCEESS_KEY }}"
+        aws_secret_key: "{{ AWS_SECRET_KEY }}"
+        region: "{{ AWS_REGION }}"
+
+
+#    - name: Ensure war file on App Server
+#      get_url:
+#        url: https://s3.us-east-2.amazonaws.com/mybacket1.test5.com/hello-1.0.war
+#        dest: /home/ubuntu/war/hello-1.0.war
 
     - name: Ensure old version is not running
       shell: |
