--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -62,7 +62,7 @@
         - python-pip
 
     - name: Requirements for aws_s3
-      command: python -m pip install boto3 datautil
+      command: python -m pip install botocore boto3
 
     - name: Ensure derictory for war file is ready
       file:
