--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -29,7 +29,7 @@
     command: mvn package -f /tmp/WAR/pom.xml
 
   - name: Requirements for s3_sync
-    command: python -m pip install boto3 datautil
+    command: python3 -m pip install boto3 datautil
 
   - name: Ensure war file in s3 backet
     s3_sync:
@@ -61,7 +61,7 @@
         - python3-pip
 
     - name: Requirements for aws_s3
-      command: python -m pip install botocore boto3
+      command: python3 -m pip install botocore boto3
 
     - name: Ensure derictory for war file is ready
       file:
