--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -29,7 +29,7 @@
     command: mvn package -f /tmp/WAR/pom.xml
 
   - name: Requirements for s3_sync
-    command: python3 -m pip install boto3 datautil
+    command: python3 -m pip install boto3 python-dateutil
 
   - name: Ensure war file in s3 backet
     s3_sync:
