--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,4 +1,11 @@
 ---
+- hosts: all
+  gather_facts: no
+  tasks:
+    - name: Wait 600 seconds for connection to become reachable/usable
+        wait_for_connection:
+
+
 
 - name: Build provisioning
   hosts: tag_Name_build
