--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -2,8 +2,10 @@
 - hosts: all
   gather_facts: no
   tasks:
-    - name: Wait 600 seconds for connection to become reachable/usable
-      wait_for_connection:
+  - name: Wait 600 seconds for connection to become reachable/usable
+    wait_for_connection:
+      delay: 60
+      timeout: 300
 
 
 
