--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -69,8 +69,8 @@
         - docker.io
         - python3-pip
 
-    - name: Requirements for aws_s3
-      command: python3 -m pip install botocore boto3
+    - name: Requirements for aws
+      command: python3 -m pip install boto botocore boto3
 
     - name: Ensure derictory for war file is ready
       file:
