--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -98,6 +98,8 @@
 
     - name: Ensure Build Server is Terminated
       ec2:
+        image: ami-0dd9f0e7df0f0a138
+        instance_type: t2.micro
         instance_tags:
           Name: build
         state: absent
