--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -44,13 +44,13 @@
       dest: /tmp/
 
   - name: Build docker image
-    command: docker build /tmp/ -t lebedevds/war_image:0.1
+    command: docker build /tmp/ -t "{{ IMAGE_NAME }}"
 
   - name: Ensure image on DockerHub
     shell: |
       docker login -u lebedevds -p "{{ DOCKER_PASSWORD }}"
-      docker tag lebedevds/war_image:0.1 lebedevds/war_image:0.1
-      docker push lebedevds/war_image:0.1
+      docker tag "{{ IMAGE_NAME }}" "{{ IMAGE_NAME }}"
+      docker push "{{ IMAGE_NAME }}"
 
 
 
@@ -72,4 +72,4 @@
       ignore_errors: yes
 
     - name: Ensure docker container is started
-      command: docker run --name webapp -d -p 8080:8080 --restart=always lebedevds/war_image:0.1
+      command: docker run --name webapp -d -p 8080:8080 --restart=always "{{ IMAGE_NAME }}"
